...
    <string name="app_title">Real Estate Manager</string>
    <string name="image">image</string>

    <!--Toolbar-->
    <string name="item_search_title">Search</string>
    <string name="item_edit_title">Edit</string>
    <string name="item_create_title">Create</string>
    <string name="item_prefs_title">Preferences</string>
    <string name="create_title">Create Property</string>
    <string name="edit_title">Edit Property</string>
    <string name="logout_title">Logout</string>
    <string name="map_title">Maps</string>

    <!--Navigation Drawer-->
    <string name="item_estate_loan_simulator">Estate loan simulator</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Main-->
    <string name="welcome_title">Welcome to Real Estate Manager !</string>
    <string name="welcome_text">To start using the app, please register a property.</string>
    <string name="gps_title">Location is not enable !</string>
...
